
* Add more file tests than -f for [if file].

	[if file-s catalog.cfg > 10000]
		catalog.cfg size is greater than 10000
	[else]
		catalog.cfg size is not greater than 10000
	[/else]
	[/if]

	[if file-w catalog.cfg]
		catalog.cfg can be written
	[/if]

	[if file-T catalog.cfg]
		catalog.cfg is a text file
	[/if]

	[if file-B catalog.cfg]
		catalog.cfg is a binary file
	[/if]

	etc.

  The tests are standard Perl tests, supported are:

	A B d e f g l M r s T u w x

* Fix bug in Glimpse search that caused mv_substring_match never to work. 
  Glimpse only allows setting substring or full word matches per search, 
  not per word, so if any word is flagged as a substring match, the whole 
  search is. Otherwise, it's a full word match.

* Fix bug that prevented multiple-field searches from working, e.g.
  sf=15:16:17:18.

UI
--

* Escape HTML tags within ITL test code output.

* Customer Mailing added to edit permissions page.

* Fix the long-standing "page [cgi mv_data_table] not found" error on
  return from meta_editor.

* Display "New item" in the HTML title of the item editor for new items.

Menu
----

* Allow "Create menu from HTML" option to recognize <OPTION value=URL>Anchor
  lists.

UserTag
-------

* Make secure image directory be set to something even if no
  separate secure image directory within [image] UserTag.

Foundation
----------

* Void mv_form_profile on changing shipping country in account page.

i18n
----

* Continued translation of UI.

Link
----

* Add Interchange::Link (mod_perl 1.99/2.0 link program) by Mike Heins, which
  optionally can replace vlink and tlink. It includes many features found in
  mod_interchange and also a mechanism to deliver static files outside of
  Interchange.

Debian
------

* Added te editor for tab-delimited files (Closes: #132757)

RPM
---

* Install te editor for tab-delimited files into /usr/bin.


------------------------------------------------------------------------------

(end)