@@ -54,6 +54,8 @@ Core
 * Fix bug that prevented multiple-field searches from working, e.g.
   sf=15:16:17:18.
 
+* Add table to [import] error message.
+
 UI
 --
 
